Fix svg width on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -73,6 +73,7 @@ kbd {
 }
 
 .step-diagram svg {
+  width: 100%;
   height: 100%;
   max-height: inherit;
 }
